<resources>
    <string name="app_name">小V视频</string>
    <string name="splash_activity">欢迎界面</string>
    <string name="open_eyes">开眼</string>
    <string name="open_eyes_english">eyepetizer</string>
    <string name="selected_video_recommended_dailyopen_your_eyes">每日精选视频推荐，让你大开眼界</string>
    <string name="splash_text_bottom_english">Daily appetizer for your eyes.Widen horizon.</string>
    <string name="for_ntoday">for\nToday</string>
    <string name="today_choiceness">今日精选 >>></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide_fragment_one">每日编辑精选，一句既往\nDaily appetizers for your eyes,as always</string>
    <string name="guide_fragment_two">关注越多，发现越多\nSubscribe more,discover a whole lot more</string>
    <string name="guide_fragment_three">离线自动缓存，精彩用不下线\nEnjoy your daily eyepetit,even without connectivity</string>
    <string name="guide_fragment_four">登录即可订阅、评论和同步已收藏视频\nSign in to comment,collect video,to subscript also</string>
    <string name="choincess">精选</string>
    <string name="attention">关注</string>
    <string name="my">我的</string>
    <string name="discover">发现</string>
    <string name="choiceness_video_text_example">mm豆领先主演的mv</string>
    <string name="choiceness_duration">03\'41\"</string>
    <string name="choiceness_tyoe">#音乐</string>
</resources>
