<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zjhl.wxf.openeyes.view.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13" />

    <RadioGroup
        android:id="@+id/main_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_button_choiceness"
            style="@style/main_activity_radiobutton_style"
            android:drawableTop="@drawable/choiceness_radio"
            android:text="@string/choincess" />

        <RadioButton
            android:id="@+id/main_button_discover"
            style="@style/main_activity_radiobutton_style"
            android:drawableTop="@drawable/discover_radio"
            android:text="@string/discover" />

        <RadioButton
            android:id="@+id/main_button_attention"
            style="@style/main_activity_radiobutton_style"
            android:drawableTop="@drawable/attention_radio"
            android:text="@string/attention"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/main_button_my"
            style="@style/main_activity_radiobutton_style"
            android:drawableTop="@drawable/my_radio"
            android:text="@string/my" />
    </RadioGroup>

</LinearLayout>
